examples/canary-project/src/bad/long-function.ts
// VIOLATION #4 — long-function : fonction > 100 lignes (extractor par défaut).
//
// Détection attendue : longFunctions[] non-vide.

import { hub } from './hub.js'

export function veryLongFunction(input: number): number {
  let acc = 0
  acc += input * 1
  acc += input * 2
  acc += input * 3
  acc += input * 4
  acc += input * 5
  acc += input * 6
  acc += input * 7
  acc += input * 8
  acc += input * 9
  acc += input * 10
  acc += input * 11
  acc += input * 12
  acc += input * 13
  acc += input * 14
  acc += input * 15
  acc += input * 16
  acc += input * 17
  acc += input * 18
  acc += input * 19
  acc += input * 20
  acc += input * 21
  acc += input * 22
  acc += input * 23
  acc += input * 24
  acc += input * 25
  acc += input * 26
  acc += input * 27
  acc += input * 28
  acc += input * 29
  acc += input * 30
  acc += input * 31
  acc += input * 32
  acc += input * 33
  acc += input * 34
  acc += input * 35
  acc += input * 36
  acc += input * 37
  acc += input * 38
  acc += input * 39
  acc += input * 40
  acc += input * 41
  acc += input * 42
  acc += input * 43
  acc += input * 44
  acc += input * 45
  acc += input * 46
  acc += input * 47
  acc += input * 48
  acc += input * 49
  acc += input * 50
  acc += input * 51
  acc += input * 52
  acc += input * 53
  acc += input * 54
  acc += input * 55
  acc += input * 56
  acc += input * 57
  acc += input * 58
  acc += input * 59
  acc += input * 60
  acc += input * 61
  acc += input * 62
  acc += input * 63
  acc += input * 64
  acc += input * 65
  acc += input * 66
  acc += input * 67
  acc += input * 68
  acc += input * 69
  acc += input * 70
  acc += input * 71
  acc += input * 72
  acc += input * 73
  acc += input * 74
  acc += input * 75
  acc += input * 76
  acc += input * 77
  acc += input * 78
  acc += input * 79
  acc += input * 80
  acc += input * 81
  acc += input * 82
  acc += input * 83
  acc += input * 84
  acc += input * 85
  acc += input * 86
  acc += input * 87
  acc += input * 88
  acc += input * 89
  acc += input * 90
  acc += input * 91
  acc += input * 92
  acc += input * 93
  acc += input * 94
  acc += input * 95
  acc += input * 96
  acc += input * 97
  acc += input * 98
  acc += input * 99
  acc += input * 100
  acc += input * 101
  acc += input * 102
  acc += input * 103
  acc += input * 104
  acc += input * 105
  return acc + (hub().length)
}
